# AI-study_quote-collector

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  middleware.ts  next.config.js  package-lock.json  package.json  vercel.json
app/: layout.tsx  page.tsx
app/(main)/: layout.tsx  page.tsx
app/terms/: page.tsx
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  auth.py  check_book.py  config.py  deploy.sh  docker-compose.yml  main.py  pyproject.toml  requirements.lock.backup
backend/models/: activity.py  book.py  quote.py  sns_user.py  tag.py
backend/routes/: activities.py  books.py  export.py  ocr.py  quotes.py  sns_users.py  tags.py
backend/services/: amazon_scraper.py  csv_generator.py  ocr_service.py  sns_scraper.py
backend/tests/: README.md  conftest.py
backend/tests/test_routes/: test_activities.py
backend/tests/test_services/: test_ocr_service.py
docs/: API設計書_v2.md  API設計書_v3_FastAPI補足.md  FastAPIセットアップガイド.md  README.md  デプロイガイド_CloudRun.md  データベース設計書_v2.md  修正計画書.md  技術仕様書_v2.md  技術仕様書_v3_FastAPI.md  画面設計書_実装版_v2.md
docs/deployment/: README.md
docs/development/: PROGRESS.md  QUICKSTART.md
docs/learning/: 01_basics.md  02_project_structure.md  03_data_flow.md  04_types_file.md  05_header_component.md  06_api_activities.md  README.md  (+2 more)
frontend/: .dockerignore  .env.example  Dockerfile  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts
infra/: ENVIRONMENT_VARIABLES.md
scripts/: seed-test-data.js
styles/: globals.css
supabase/: README.md
(+119 files in other folders)
